--- a/CS230 Group Project/css/login.css
+++ b/CS230 Group Project/css/login.css
@@ -14,7 +14,7 @@
 }
 
 .form-signin {
-background-color: skyblue;
+background-color: beige;
 padding: 20px;
 border-radius: 20px;
 text-align: center;
