--- a/css/gallery.css
+++ b/css/gallery.css
@@ -70,7 +70,12 @@ img{
 }
 
 .footer {
-
-
+    text-align: center;
+    background: rgb(234, 170, 0);
+    padding: 8px;
+    border-style: solid;
+    border-width: 4px;
+    border-color: rgb(0, 40, 85);
     
+
 }
