--- a/css/about.css
+++ b/css/about.css
@@ -16,6 +16,10 @@ border: 3 px black;
 
 background: rgb(234, 170, 0);
 padding: 8px;
+text-align: center;
+color: rgb(0, 40, 85);
+font-weight: bold;
+
 
 
 }
@@ -41,11 +45,13 @@ img {
     border: 3px solid black;
 }
 
-.footer {
-
-    text-align:center;
-    padding:10px;
-    border: 3px solid black;
-
+    .footer {
+        text-align: center;
+        background: rgb(234, 170, 0);
+        padding: 8px;
+        border-style: solid;
+        border-width: 4px;
+        border-color: rgb(0, 40, 85);
+    
 
 }
