--- a/css/gallery.css
+++ b/css/gallery.css
@@ -9,9 +9,9 @@ h1{
 
     background: rgb(234, 170, 0);
     padding: 8px;
-    border-style: solid;
-    border-width: 4px;
-    border-color: rgb(0, 40, 85);
+    text-align: center;
+    color: rgb(0, 40, 85);
+    font-weight: bold;
     
     }
 
