--- a/css/login.css
+++ b/css/login.css
@@ -1,3 +1,8 @@
+
+/*
+CSS Formating for the Login page.
+*/
+
 .bg-cover {
     background-image: url("../images/background.jpg");
     height: 100vh;
