--- a/css/signup.css
+++ b/css/signup.css
@@ -1,3 +1,8 @@
+
+/*
+CSS Formating for the Signup page.
+*/
+
 .bg-cover {
     background-image: url("../images/background.jpg");
     height: 100vh;
@@ -8,8 +13,8 @@
 }
 
 .container {
-   
-width: 50%;
+ width: 50%;
+
 }
 
 .center-me {
