--- a/css/review.css
+++ b/css/review.css
@@ -2,11 +2,9 @@
 CSS Formating for recipe review.
 */
 
-.card{
-    border-radius: 10px;
-    margin: 10px;
-    width: 70%;
-    height: auto;
-    padding: 5px;
-    align-self: center;
+.card {
+  
+    box-shadow: 0px 4px 8px 0 #b3b3b3f5;
+    padding: 0 16px 0 16px;
+    border: 3px solid black;
 }
