--- a/css/review.css
+++ b/css/review.css
@@ -7,4 +7,10 @@ CSS Formating for recipe review.
     box-shadow: 0px 4px 8px 0 #b3b3b3f5;
     padding: 0 16px 0 16px;
     border: 3px solid rgb(0, 40, 85);
+    height: 500px;
+    width: 500px;
 }
+
+
+
+
