--- a/css/review.css
+++ b/css/review.css
@@ -11,6 +11,15 @@ CSS Formating for recipe review.
     width: 500px;
 }
 
+.bg-cover {
+    background-image: url("../images/background.jpg");
+    height: 100vh;
+    background-position: center;
+    background-size: cover;
+    background-attachment: scroll;
+    background-repeat: repeat-y; 
+}
+
 
 
 
