--- a/css/display-review.css
+++ b/css/display-review.css
@@ -1,3 +1,12 @@
 h6{
     font-weight: bold;
 }
+
+.bg-cover {
+    background-image: url("../images/background.jpg");
+    height: 100vh;
+    background-position: center;
+    background-size: cover;
+    background-attachment: scroll;
+    background-repeat: no-repeat; 
+}
