--- a/css/signup.css
+++ b/css/signup.css
@@ -3,6 +3,13 @@
 CSS Formating for the Signup page.
 */
 
+main {
+
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-align: center;
+
+}
+
 .bg-cover {
     background-image: url("../images/background.jpg");
     height: 100vh;
